k8s/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: rails-app
  type: ClusterIP
